tooling/nargo_cli/tests/snapshots/compile_failure/restricted_bit_sizes/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
warning: unused import assert_constant
  ┌─ src/main.nr:1:10
  │
1 │ use std::assert_constant;
  │          --------------- unused import
  │

error: Use of invalid bit size 63
  ┌─ src/main.nr:3:18
  │
3 │ fn main() -> pub u63 {
  │                  --- Allowed bit sizes for integers are 1, 8, 16, 32, 64, 128
  │

Aborting due to 1 previous error
