tooling/nargo_cli/tests/snapshots/compile_failure/restricted_bit_sizes/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
warning: unused import assert_constant
  ┌─ src/main.nr:1:10
  │
1 │ use std::assert_constant;
  │          --------------- unused import
  │

error: Could not resolve 'u63' in path
  ┌─ src/main.nr:3:18
  │
3 │ fn main() -> pub u63 {
  │                  ---
  │

Aborting due to 1 previous error
